hphp/hack/test/typecheck/unbound_name/method_caller.php.exp
File "method_caller.php", line 13, characters 15-24:
Unbound name: `NotFound` (an object type) (Naming[2049])
File "method_caller.php", line 13, characters 15-24:
Unbound name (typing): `NotFound` (Typing[4107])
